swagger.json 토큰인증방식 및 api http method 수정, api맞춰 자바 코드 수정
