# src/main/java/com/dictionary/controller/DictionaryController.java
@@ -14,6 +14,7 @@ import org.springframework.web.bind.annotation.RequestMapping;
 import org.springframework.web.bind.annotation.RequestMethod;
 import org.springframework.web.bind.annotation.RestController;
 
+import javax.servlet.http.HttpServletRequest;
 import java.io.UnsupportedEncodingException;
 import java.util.HashMap;
 import java.util.List;
@@ -37,28 +38,30 @@ public class DictionaryController {
 
 
     @RequestMapping(value = "", method = RequestMethod.POST)
-    public ResponseEntity add(User user, UserDictionary userDictionary) throws UnsupportedEncodingException {
+    public ResponseEntity add(HttpServletRequest httpServletRequest,User user, UserDictionary userDictionary) throws UnsupportedEncodingException {
+        String auth=httpServletRequest.getHeader("authorization");
         User dbUser = userRepository.findOne(user.getId());
-        Map map = new HashMap();
-        System.out.println(1234);
-        if (AuthToken.authToken(user.getId(),user.getToken())&&dbUser.getToken().equals(user.getToken())) {
+        Map<String,Object> map = new HashMap();
+        if (AuthToken.authToken(user.getId(),auth)&&dbUser.getToken().equals(auth)) {
             userDictionary.setUser(user);
             userDictionaryRepository.save(userDictionary);
-            map.put("message", "successed");
+            map.put("message", "단어장 생성 성공");
+            map.put("dic",userDictionary);
             return new ResponseEntity<>(map, HttpStatus.OK);
         }
-        map.put("message", "failed");
+        map.put("message", "단어장 생성 실패,토큰을 확인하세요.");
         return new ResponseEntity<>(map, HttpStatus.BAD_REQUEST);
     }
 
-    @RequestMapping(value = "delete", method = RequestMethod.POST)
-    public ResponseEntity delete(User user, UserDictionary userDictionary) throws UnsupportedEncodingException {
-        User dbUser = userRepository.findOne(user.getId());
+    @RequestMapping(value = "{userid}/{dicno}", method = RequestMethod.DELETE)
+    public ResponseEntity delete(HttpServletRequest httpServletRequest, @PathVariable String userid, @PathVariable Long dicno) throws UnsupportedEncodingException {
+        User dbUser = userRepository.findOne(userid);
+        String auth=httpServletRequest.getHeader("authorization");
         Map map = new HashMap();
-        if (AuthToken.authToken(user.getId(), user.getToken()) && dbUser.getToken().equals(user.getToken())) {
-            UserDictionary dbUserDictionary = userDictionaryRepository.findOne(userDictionary.getNo());
-            if (dbUserDictionary.getUser().getId().equals(user.getId()))
-                userDictionaryRepository.delete(userDictionary);
+        if (AuthToken.authToken(userid, auth) && dbUser.getToken().equals(auth)) {
+            UserDictionary dbUserDictionary = userDictionaryRepository.findOne(dicno);
+            if (dbUserDictionary.getUser().getId().equals(userid))
+                userDictionaryRepository.delete(dbUserDictionary);
             map.put("message", "successed");
             return new ResponseEntity<>(map, HttpStatus.OK);
         }
